--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "build": "ts-node script.ts"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@iconify/json": "^2.1.131",
-    "pascal-case": "^3.1.2"
-  },
+  "author": "Marcin Wos",
+  "license": "MIT",
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^18.11.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "@iconify/json": "^2.1.131",
+    "pascal-case": "^3.1.2"
   }
 }
