update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iconify-icon-names",
+  "name": "iconify-icon-list-names",
   "version": "1.0.1",
   "description": "",
   "main": "",
